--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
             drawBanner("DEDKODE: KILL CHAIN");
             printToTerminal("Initializing...", true);
             setTimeout(() => {
-                printToTerminal("\n[DedKode]: \"You hearing this static? Something's listening...\"");
-                printToTerminal("[DedKode]: \"No turning back now. Pick your move, fast.\"");
+                printToTerminal("\n[DedKode]: \"Yo, You hearing this static? Some asshold's listening...\"");
+                printToTerminal("[DedKode]: \"No turning back now. Pick your move, fast, bruh.\"");
                 document.getElementById("startButton").style.display = "none";
                 document.getElementById("choices").style.display = "block";
             }, 3000);
@@ -159,6 +159,8 @@
         document.querySelectorAll("#choices button").forEach(button => {
             button.disabled = false;
         });
+    }
+});
     }
 });
     }
