--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             drawBanner("DEDKODE: KILL CHAIN");
             printToTerminal("Initializing...", true);
             setTimeout(() => {
-                printToTerminal("\n[DedKode]: \"Yo, You hearing this static? Some asshold's listening...\"");
+                printToTerminal("\n[DedKode]: \"Yo, You hearing this static? Some ass hat's listening...\"");
                 printToTerminal("[DedKode]: \"No turning back now. Pick your move, fast, bruh.\"");
                 document.getElementById("startButton").style.display = "none";
                 document.getElementById("choices").style.display = "block";
