--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             printToTerminal("Initializing...", true);
             setTimeout(() => {
                 printToTerminal("\n[DedKode]: \"Yo, You hearing this static? Some ass hat's listening...\"");
-                printToTerminal("[DedKode]: \"No turning back now. Pick your move, fast, bruh."\"");
+                printToTerminal("[DedKode]: \"No turning back now. Pick your move, fast, bruh.\"");
                 document.getElementById("startButton").style.display = "none";
                 document.getElementById("choices").style.display = "block";
             }, 3000);
