--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </style>
 </head>
 <body>
-    <h1 class="glitch">DEDKODE: KILL CHAIN V.1.3</h1>
+    <h1 class="glitch">DEDKODE: KILL CHAIN V.1.4</h1>
     <p style="font-size: 24px; font-weight: bold;">Health: <span id="health">3</span></p>
     <textarea id="terminal" readonly></textarea>
     <br>
@@ -134,6 +134,20 @@
                     button.disabled = false;
                 });
             }
+        }
+            function playerChoice(option) {
+            printToTerminal(`[You]: ${option === 'trace' ? 'Initiating trace...' : option === 'brute' ? 'Deploying brute force attack...' : 'Engaging Ghost Mode...'}`);
+            document.getElementById("choices").style.display = "none";
+            setTimeout(() => {
+                if (option === 'trace') {
+                    printToTerminal("[DedKode]: \"Clever. But Spectre moves faster...\"");
+                } else if (option === 'brute') {
+                    printToTerminal("[DedKode]: \"Loud. Reckless. I like it. Hope you can handle Spectre's response.\"");
+                } else if (option === 'ghost') {
+                    printToTerminal("[DedKode]: \"Smart. But Spectre is watching. It always is.\"");
+                }
+                triggerSpectreGlitch();
+            }, 2000);
         }
     </script>
 </body>
