--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </style>
 </head>
 <body>
-    <h1 class="glitch">DEDKODE: KILL CHAIN V.2</h1>
+    <h1 class="glitch">DEDKODE: KILL CHAIN V.2.1</h1>
     <p style="font-size: 24px; font-weight: bold;">Health: <span id="health">3</span></p>
     <textarea id="terminal" readonly></textarea>
     <br>
@@ -88,6 +88,6 @@
     </div>
 
     <!-- Game Script -->
-    <script src="game.js"></script>
+    <script src="game.js" defer></script>
 </body>
 </html>
