--- a/index.html
+++ b/index.html
@@ -1,93 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DedKode: Kill Chain</title>
-    <style>
-        body {
-            background-color: black;
-            color: lime;
-            font-family: monospace;
-            text-align: center;
-            transition: background-color 0.2s ease-in-out;
-        }
-        textarea {
-            width: 80%;
-            height: 400px;
-            background: black;
-            color: lime;
-            font-family: monospace;
-            border: 2px solid lime;
-            padding: 10px;
-            overflow-y: scroll;
-        }
-        button {
-            background: lime;
-            color: black;
-            font-size: 16px;
-            padding: 10px;
-            border: none;
-            cursor: pointer;
-            margin: 5px;
-        }
-        .glitch {
-            color: red;
-            animation: glitch 0.1s infinite alternate;
-        }
-        @keyframes glitch {
-            0% { text-shadow: 2px 2px red; transform: translate(1px, 1px); }
-            100% { text-shadow: -2px -2px red; transform: translate(-1px, -1px); }
-        }
-        .jumpscare {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100vw;
-            height: 100vh;
-            background: black;
-            z-index: 9999;
-        }
-        .jumpscare img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>DedKode: Kill Chain</title>
+  <style>
+    body {
+      background-color: black;
+      color: lime;
+      font-family: monospace;
+      text-align: center;
+      transition: background-color 0.2s ease-in-out;
+    }
+    textarea {
+      width: 80%;
+      height: 400px;
+      background: black;
+      color: lime;
+      font-family: monospace;
+      border: 2px solid lime;
+      padding: 10px;
+      overflow-y: scroll;
+    }
+    button {
+      background: lime;
+      color: black;
+      font-size: 16px;
+      padding: 10px;
+      border: none;
+      cursor: pointer;
+      margin: 5px;
+    }
+    .glitch {
+      color: red;
+      animation: glitch 0.1s infinite alternate;
+    }
+    @keyframes glitch {
+      0% { text-shadow: 2px 2px red; transform: translate(1px, 1px); }
+      100% { text-shadow: -2px -2px red; transform: translate(-1px, -1px); }
+    }
+    .jumpscare {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: black;
+      z-index: 9999;
+    }
+    .jumpscare img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  </style>
 </head>
 <body>
-    <h1 class="glitch">DEDKODE: KILL CHAIN V.2.2</h1>
-    <p style="font-size: 24px; font-weight: bold;">Health: <span id="health">5</span></p>
-    <textarea id="terminal" readonly></textarea>
-    <br>
-    <button id="startButton">Start Game</button>
-    <div id="choices" style="display:none;">
-        <button id="traceBtn">Trace the Signal</button>
-        <button id="bruteBtn">Brute Force Access</button>
-        <button id="ghostBtn">Go Ghost Mode</button>
-    </div>
-    <div id="puzzle" style="display:none;">
-        <p>Enter the security override code:</p>
-        <input type="text" id="puzzleInput" />
-        <button id="puzzleSubmit">Submit</button>
-    </div>
-    
-    <!-- Jumpscare Elements -->
-    <div class="jumpscare" id="jumpscare1">
-        <img src="jumpscare.png" alt="Scary face" />
-        <audio id="jumpscareSound1" src="jumpscare.mp3"></audio>
-    </div>
-    <div class="jumpscare" id="jumpscare2">
-        <img src="jumpscare2.png" alt="Scary face 2" />
-        <audio id="jumpscareSound2" src="jumpsound2.mp3"></audio>
-    </div>
-    <div class="jumpscare" id="jumpscare3">
-        <img src="jumpscare3.png" alt="Scary face 3" />
-        <audio id="jumpscareSound3" src="jumpsound3.mp3"></audio>
-    </div>
+  <h1 class="glitch">DEDKODE: KILL CHAIN v1.5</h1>
+  <p style="font-size: 24px; font-weight: bold;">
+    Health: <span id="health">5</span> | Corruption: <span id="corruption">0</span>
+  </p>
 
-    <!-- Game Script -->
-    <script src="game.js" defer></script>
+  <textarea id="terminal" readonly></textarea>
+  <br />
+  <button id="startButton">Start Game</button>
+
+  <div id="choices" style="display:none;">
+    <button id="traceBtn">Trace the Signal</button>
+    <button id="bruteBtn">Brute Force Access</button>
+    <button id="ghostBtn">Go Ghost Mode</button>
+  </div>
+
+  <!-- DedKode Image -->
+  <img id="dedKodeImage" src="" alt="DedKode Moment"
+       style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; object-fit:cover; z-index:9998;">
+
+  <!-- Jumpscares -->
+  <div class="jumpscare" id="jumpscare1">
+    <img src="jumpscare.png" alt="Scary face" />
+    <audio id="jumpscareSound1" src="jumpscare.mp3"></audio>
+  </div>
+  <div class="jumpscare" id="jumpscare2">
+    <img src="jumpscare2.png" alt="Scary face 2" />
+    <audio id="jumpscareSound2" src="jumpsound2.mp3"></audio>
+  </div>
+  <div class="jumpscare" id="jumpscare3">
+    <img src="jumpscare3.png" alt="Scary face 3" />
+    <audio id="jumpscareSound3" src="jumpsound3.mp3"></audio>
+  </div>
+
+  <!-- Game Logic -->
+  <script src="game.js"></script>
 </body>
 </html>
