--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
   </style>
 </head>
 <body>
-  <h1 class="glitch">DEDKODE: KILL CHAIN v2.0</h1>
+  <h1 class="glitch">DEDKODE: KILL CHAIN v3</h1>
+
   <p style="font-size: 24px; font-weight: bold;">
     Health: <span id="health">5</span> | Corruption: <span id="corruption">0</span>
   </p>
@@ -72,14 +73,17 @@
     <button id="ghostBtn">Go Ghost Mode</button>
   </div>
 
-  <!-- DedKode Face Drop -->
+  <div id="inventory"></div>
+
+  <!-- DedKode Image -->
   <img id="dedKodeImage" src="" alt="DedKode"
-       style="display:none; position:fixed; top:50%; left:50%; transform:translate(-50%, -50%);
-              width: 40vw; height:auto; z-index:9998; border:2px solid lime; filter:drop-shadow(0 0 10px lime);">
+       style="display:none; position:fixed; top:50%; left:50%;
+       transform:translate(-50%, -50%); width: 40vw; height:auto;
+       z-index:9998; border:2px solid lime; filter:drop-shadow(0 0 10px lime);">
 
   <!-- Jumpscares -->
   <div class="jumpscare" id="jumpscare1">
-    <img src="jumpscare.png" alt="Scary face 1" />
+    <img src="jumpscare.png" alt="Scary face" />
     <audio id="jumpscareSound1" src="jumpscare.mp3"></audio>
   </div>
   <div class="jumpscare" id="jumpscare2">
@@ -91,7 +95,6 @@
     <audio id="jumpscareSound3" src="jumpsound3.mp3"></audio>
   </div>
 
-  <!-- Game Logic -->
   <script src="game.js"></script>
 </body>
 </html>
