--- a/index.html
+++ b/index.html
@@ -57,31 +57,46 @@
   </style>
 </head>
 <body>
-  <h1 class="glitch">DEDKODE: KILL CHAIN v3</h1>
+  <h1 class="glitch">DEDKODE: KILL CHAIN v3.1</h1>
 
   <p style="font-size: 24px; font-weight: bold;">
     Health: <span id="health">5</span> | Corruption: <span id="corruption">0</span>
   </p>
 
+  <!-- 🧠 Instructions (Fades on game start) -->
+  <div id="instructions">
+    <p><strong>INSTRUCTIONS:</strong></p>
+    <ul style="text-align: left; display: inline-block; font-size: 14px;">
+      <li>🖥 Click "Start Game" to initialize the terminal.</li>
+      <li>👾 Choose a hacking method to respond to Spectre.</li>
+      <li>🧩 Solve puzzles and avoid corruption.</li>
+      <li>💀 Health hits 0 or corruption hits 5 = Game Over.</li>
+      <li>🔓 Secrets exist. Can you unlock OBLIVION?</li>
+    </ul>
+  </div>
+
+  <!-- 💻 Terminal -->
   <textarea id="terminal" readonly></textarea>
+
+  <!-- 🎮 Game Buttons -->
   <br />
   <button id="startButton">Start Game</button>
-
   <div id="choices" style="display:none;">
     <button id="traceBtn">Trace the Signal</button>
     <button id="bruteBtn">Brute Force Access</button>
     <button id="ghostBtn">Go Ghost Mode</button>
   </div>
 
+  <!-- 🎒 Inventory -->
   <div id="inventory"></div>
 
-  <!-- DedKode Image -->
+  <!-- 🧑‍💻 DedKode Visual -->
   <img id="dedKodeImage" src="" alt="DedKode"
-       style="display:none; position:fixed; top:50%; left:50%;
-       transform:translate(-50%, -50%); width: 40vw; height:auto;
+       style="display:none; position:fixed; top:10%; left:80%;
+       width: 20vw; height:auto;
        z-index:9998; border:2px solid lime; filter:drop-shadow(0 0 10px lime);">
 
-  <!-- Jumpscares -->
+  <!-- 💀 Jumpscares -->
   <div class="jumpscare" id="jumpscare1">
     <img src="jumpscare.png" alt="Scary face" />
     <audio id="jumpscareSound1" src="jumpscare.mp3"></audio>
@@ -95,6 +110,7 @@
     <audio id="jumpscareSound3" src="jumpsound3.mp3"></audio>
   </div>
 
+  <!-- 🧠 Game Logic -->
   <script src="game.js"></script>
 </body>
 </html>
