--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <!-- 🧠 PWA Config -->
   <meta name="theme-color" content="#00ff00">
   <link rel="manifest" href="manifest.webmanifest">
+  <link rel="assetlinks" href="_well-known/assetlinks.json">
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('/service-worker.js')
