--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <title>DedKode: Kill Chain</title>
 
   <!-- 🧠 PWA Config -->
-  <meta name="theme-color" content="#00ff00">
-  <link rel="manifest" href="manifest.webmanifest">
-  <link rel="assetlinks" href="_well-known/assetlinks.json">
+  <meta name="theme-color" content="#00ff00" />
+  <link rel="manifest" href="manifest.json" />
+
   <script>
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/service-worker.js')
+      navigator.serviceWorker.register('/sw.js')
         .then(() => console.log('✅ Service Worker registered.'))
         .catch(err => console.error('❌ Service Worker failed:', err));
     }
